<resources>
    <string name="app_name">Sleap</string>

    <!-- Main tab titles -->
    <string name="title_tab_alarms">My Alarms</string>
    <string name="title_tab_challenges">Challenges</string>
    <string name="title_tab_score">Score</string>
    <string name="title_tab_user">User</string>

    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
    <string name="select_time">06:00</string>
    <string name="name_alarm">Name</string>
    <string name="alarm_volume">Alarm volume</string>
    <string name="challenge_shake_it">Challenge - Shake it!</string>
    <string name="shake_your_phone">Shake your phone</string>
    <string name="shake_times">times!</string>
    <string name="shake_challenge">Shake challenge</string>
    <string name="completed_challenges">Completed Challenges</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="enable_multiple_challenges">Enable challenges</string>
    <string name="select_your_challenge">Select your challenge</string>
    <string name="title_activity_play_challenge_page">PlayChallengePage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="shake_amount">Current amount of shakes: </string>
    <string name="edit_shake_text">Here you can change the amount of shakes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_add__challenge">Add_Challenge</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
